--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,15 @@
+:toc:
+:toc-placement!:
+
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+
 = Vanguard GICS Importer
 
-:toc:
+toc::[]
 
 == Description
 
