--- a/README.adoc
+++ b/README.adoc
@@ -32,51 +32,302 @@ The goal is to make this tool available to get better data quality for custom ex
 . Run `npx ts-node index.ts` in root dir
 
 === Output
-Using the given data example representing the https://www.de.vanguard/professionell/anlageprodukte/etf/aktien/9675/ftse-developed-world-ucits-etf-usd-accumulating[Vanguard FTSE Developed World ETF] this tool will print the following output:
+Using the given data example representing the https://www.de.vanguard/professionell/anlageprodukte/etf/aktien/9675/ftse-developed-world-ucits-etf-usd-accumulating[Vanguard FTSE Developed World ETF] this tool will print the following JSON output:
 
-```
+```JSON
 {
-  isin: 'REPLACEME',
-  industryData: [
-    { industry: 452020, percentage: 5.118 },
-    { industry: 451030, percentage: 7.302 },
-    { industry: 251020, percentage: 2.535 },
-    { industry: 402010, percentage: 1.12 },
-    { industry: 352020, percentage: 5.667 },
-    { industry: 303020, percentage: 1.507 },
-    { industry: 302020, percentage: 1.494 },
-    { industry: 401010, percentage: 5.108 },
-    { industry: 502020, percentage: 0.929 },
-    { industry: 502010, percentage: 0.609 },
-    { industry: 252030, percentage: 0.574 },
-    { industry: 551010, percentage: 1.685 },
-    { industry: 151010, percentage: 1.061 },
-    { industry: 252010, percentage: 0.337 },
-    { industry: 203010, percentage: 0.483 },
-    { industry: 302030, percentage: 0.595 },
-    { industry: 201050, percentage: 1.537 },
-    { industry: 352010, percentage: 1.21 },
-    { industry: 402030, percentage: 1.047 },
-    { industry: 201010, percentage: 1.217 },
-    { industry: 451020, percentage: 1.241 },
-    { industry: 302010, percentage: 0.622 },
-    { industry: 255040, percentage: 0.535 },
-    { industry: 151040, percentage: 1.1 },
-    { industry: 202020, percentage: 0.194 },
-    { industry: 551030, percentage: 0.557 },
-    { industry: 201030, percentage: 0.23 },
-    { industry: 251010, percentage: 0.419 },
-    { industry: 601010, percentage: 0.137 },
-    { industry: 151030, percentage: 0.212 },
-    { industry: 151020, percentage: 0.067 },
-    { industry: 253010, percentage: 0.302 },
-    { industry: 551050, percentage: 0.085 },
-    { industry: 203020, percentage: 0.073 },
-    { industry: 101020, percentage: 0.013 }
+ "suggestion": {
+  "jsonpatchFormat": true,
+  "security": "REPLACEME",
+  "diff": [
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "452020",
+     "share": 5.118
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "451030",
+     "share": 7.302
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "251020",
+     "share": 2.535
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "402010",
+     "share": 1.12
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "352020",
+     "share": 5.667
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "303020",
+     "share": 1.507
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "302020",
+     "share": 1.494
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "401010",
+     "share": 5.108
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "502020",
+     "share": 0.929
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "502010",
+     "share": 0.609
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "252030",
+     "share": 0.574
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "551010",
+     "share": 1.685
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "151010",
+     "share": 1.061
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "252010",
+     "share": 0.337
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "203010",
+     "share": 0.483
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "302030",
+     "share": 0.595
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "201050",
+     "share": 1.537
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "352010",
+     "share": 1.21
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "402030",
+     "share": 1.047
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "201010",
+     "share": 1.217
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "451020",
+     "share": 1.241
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "302010",
+     "share": 0.622
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "255040",
+     "share": 0.535
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "151040",
+     "share": 1.1
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "202020",
+     "share": 0.194
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "551030",
+     "share": 0.557
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "201030",
+     "share": 0.23
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "251010",
+     "share": 0.419
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "601010",
+     "share": 0.137
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "151030",
+     "share": 0.212
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "151020",
+     "share": 0.067
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "253010",
+     "share": 0.302
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "551050",
+     "share": 0.085
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "203020",
+     "share": 0.073
+    }
+   },
+   {
+    "op": "add",
+    "path": "/industries/-",
+    "value": {
+     "id": "101020",
+     "share": 0.013
+    }
+   }
   ]
+ }
 }
 
+
 ```
+
+
 
 IMPORTANT: I'm still adding the mapping of descriptions used by Vanguard to the GICS Industry descriptions, so the output at this time is just a fraction of the final result.
 
@@ -85,5 +336,4 @@ IMPORTANT: I'm still adding the mapping of descriptions used by Vanguard to the 
 * Extend matching by creating a mapping table (support needed)
 * specify output format (possible JSON orientating on Parqet data format)
 ** maybe generate request and send it to specifiable API endpoint
-** API Request uses nested object, JSON representation is `{id: string, share: number}` where id is the GICS number representation of the industry
 * make multiple imports possible (needed?)
